--- a/src/Common/tests/CMakeLists.txt
+++ b/src/Common/tests/CMakeLists.txt
@@ -79,3 +79,6 @@ target_link_libraries (memory_statistics_os_perf PRIVATE clickhouse_common_io)
 
 add_executable (procfs_metrics_provider_perf procfs_metrics_provider_perf.cpp)
 target_link_libraries (procfs_metrics_provider_perf PRIVATE clickhouse_common_io)
+
+add_executable (average average.cpp)
+target_link_libraries (average PRIVATE clickhouse_common_io)
